--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
                         </div>
                         <div class="header-action-items header-action-items1">
 
-                            <a href="" style="color: #f5a828; text-decoration:underline; margin-right: 15px;">
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScg6gsA-GLKEVILR9Yf--qD9c37nyjtOHaA697L-BOfQh9AGw/viewform?embedded=true" target="_blank" style="color: #f5a828; text-decoration:underline; margin-right: 15px;">
                                 <h4 style="color: #f5a828;">Join Our Academy<i
                                         class="far fa-long-arrow-right ml--5"></i></h4>
                             </a>
@@ -502,8 +502,7 @@
                             </div>
                             <div class="section-title-area section-title-area1 text-start mb--50">
                                 <h1 class="section-title">SUBSCRIBE NEWSLETTER</h1>
-                                <p>Empus justo tortor nunc ullamcorper curabitur ultrices duis cum lobortis Montes
-                                    facilisi vitae litora non dis at class</p>
+                                <p>Stay updated on the latest news, events, and opportunities from Kedopeach Football</p>
                             </div>
                             <form>
                                 <div class="form">
@@ -565,14 +564,17 @@
                             <h3 class="footer-widget-title"><span class="decorator"></span> GET IN TOUCH</h3>
                             <ul>
                                 <li class="widget-list-item"><i class="fas fa-envelope-open"></i><a
-                                        href="mailto:info@webmail.com">INFO@WEBMAIL.COM</a></li>
-                                <li class="widget-list-item"><i class="fas fa-phone"></i><a href="tel:09877788890">098
-                                        777
-                                        888 90</a></li>
-                                <li class="widget-list-item"><i class="fas fa-map-marker-alt"></i> <span>USA, CALIFORNIA
-                                        20,
-                                        FIRST <br>
-                                        AVENUE, CALIFORNIA</span></li>
+                                        href="mailto:kedopeachsocceracademy@gmail.com">kedopeachsocceracademy@gmail.com</a></li>
+                                <li class="widget-list-item"><i class="fas fa-phone"></i>
+                                    <a href="tel:07035859226">07035859226</a>,
+
+                                    ,<a href="tel:08039288485">08039288485</a>,
+
+                                    ,<a href="tel:07084286153">07084286153</a>,
+
+
+                                </li>
+                                <li class="widget-list-item"><i class="fas fa-map-marker-alt"></i> <span>3, PEACE ESTATE, IYANA AGBALA ITURA, EGBEDA LOCAL GOVERNMENT AREA, IBADAN, OYO STATE.</span></li>
                             </ul>
                         </div>
                     </div>
@@ -588,7 +590,7 @@
                     <div class="footer-bottom-links">
                         <a href="#">TERMS & CONDITONS</a>
                         <a href="faq.html">FAQ</a>
-                        <a href="#">CAREER</a>
+                        <a href="team.html">CAREER</a>
                     </div>
                 </div>
             </div>
