--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                         </div>
                         <div class="header-action-items header-action-items1">
 
-                            <a href="" style="color: #f5a828; text-decoration:underline; margin-right: 15px;">
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScg6gsA-GLKEVILR9Yf--qD9c37nyjtOHaA697L-BOfQh9AGw/viewform?embedded=true" target="_blank" style="color: #f5a828; text-decoration:underline; margin-right: 15px;">
                                 <h4 style="color: #f5a828;">Join Our Academy<i
                                         class="far fa-long-arrow-right ml--5"></i></h4>
                             </a>
@@ -198,8 +198,7 @@
                                 <h3 class="heading">
                                     HEADQUARTERS
                                 </h3>
-                                <p class="desc">236 Dotland Street, STKD NY
-                                    Frankfurt Germany</p>
+                                <p class="desc">3, PEACE ESTATE, IYANA AGBALA ITURA, EGBEDA LOCAL GOVERNMENT AREA, IBADAN, OYO STATE.</p>
                             </div>
                         </div>
                     </div>
@@ -210,8 +209,7 @@
                                 <h3 class="heading">
                                     MAIL US 24/7
                                 </h3>
-                                <p class="desc">236 Dotland Street, STKD NY
-                                    Frankfurt Germany</p>
+                                <p class="desc">kedopeachsocceracademy@gmail.com</p>
                             </div>
                         </div>
                     </div>
@@ -220,10 +218,11 @@
                             <div class="icon"><i class="far fa-phone-volume"></i></div>
                             <div class="content">
                                 <h3 class="heading">
-                                    SPONSORS ONLY
+                                    FOR ENQUIRY & SPONSORS ONLY
                                 </h3>
-                                <p class="desc">236 Dotland Street, STKD NY
-                                    Frankfurt Germany</p>
+                                <p class="desc">  07035859226,
+                                    08039288485,
+                                    07084286153</p>
                             </div>
                         </div>
                     </div>
@@ -234,7 +233,7 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="map">
                             <p><iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3651.0452483624595!2d90.424043!3d23.781403!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3cc42b4e4b430164!2sReacThemes!5e0!3m2!1sen!2sbd!4v1656420500360!5m2!1sen!2sbd"
+                                    src="https://www.google.com/maps/embe d?pb=!1m14!1m8!1m3!1d3651.0452483624595!2d90.424043!3d23.781403!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3cc42b4e4b430164!2sReacThemes!5e0!3m2!1sen!2sbd!4v1656420500360!5m2!1sen!2sbd"
                                     height="500" style="border:0;" allowfullscreen="" loading="lazy"
                                     referrerpolicy="no-referrer-when-downgrade"></iframe></p>
                         </div>
@@ -314,14 +313,17 @@
                             <h3 class="footer-widget-title"><span class="decorator"></span> GET IN TOUCH</h3>
                             <ul>
                                 <li class="widget-list-item"><i class="fas fa-envelope-open"></i><a
-                                        href="mailto:info@webmail.com">INFO@WEBMAIL.COM</a></li>
-                                <li class="widget-list-item"><i class="fas fa-phone"></i><a href="tel:09877788890">098
-                                        777
-                                        888 90</a></li>
-                                <li class="widget-list-item"><i class="fas fa-map-marker-alt"></i> <span>USA, CALIFORNIA
-                                        20,
-                                        FIRST <br>
-                                        AVENUE, CALIFORNIA</span></li>
+                                        href="mailto:kedopeachsocceracademy@gmail.com">kedopeachsocceracademy@gmail.com</a></li>
+                                <li class="widget-list-item"><i class="fas fa-phone"></i>
+                                    <a href="tel:07035859226">07035859226</a>,
+
+                                    ,<a href="tel:08039288485">08039288485</a>,
+
+                                    ,<a href="tel:07084286153">07084286153</a>,
+
+
+                                </li>
+                                <li class="widget-list-item"><i class="fas fa-map-marker-alt"></i> <span>3, PEACE ESTATE, IYANA AGBALA ITURA, EGBEDA LOCAL GOVERNMENT AREA, IBADAN, OYO STATE.</span></li>
                             </ul>
                         </div>
                     </div>
@@ -337,7 +339,7 @@
                     <div class="footer-bottom-links">
                         <a href="#">TERMS & CONDITONS</a>
                         <a href="faq.html">FAQ</a>
-                        <a href="#">CAREER</a>
+                        <a href="team.html">CAREER</a>
                     </div>
                 </div>
             </div>
