--- a/history.html
+++ b/history.html
@@ -106,7 +106,7 @@
                         </div>
                         <div class="header-action-items header-action-items1">
 
-                            <a href="" style="color: #f5a828; text-decoration:underline; margin-right: 15px;">
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScg6gsA-GLKEVILR9Yf--qD9c37nyjtOHaA697L-BOfQh9AGw/viewform?embedded=true" target="_blank" style="color: #f5a828; text-decoration:underline; margin-right: 15px;">
                                 <h4 style="color: #f5a828;">Join Our Academy<i
                                         class="far fa-long-arrow-right ml--5"></i></h4>
                             </a>
@@ -218,49 +218,56 @@
                 <div class="history-item item-left one">
                     <div class="content">
                         <h2 class="history-title">JOURNEY WAS STARTED</h2>
-                        <p>It is one of the most popular football club that offer training programs for the youth.</p>
+                        <p>Kedopeach football academy is an infant football academy that is established some a years ago.
+
+                            Its evolution can be in two different forms which can be tagged or traced with the series of efforts and achievement recorded so far.
+                            
+                            </p>
                     </div>
-                    <div class="history-year text-start">1965</div>
+                    <div class="history-year text-start">2023</div>
                 </div>
                 <div class="history-item item-right two">
-                    <div class="history-year text-end">1990</div>
+                    <div class="history-year text-end">2023</div>
                     <div class="content">
-                        <h2 class="history-title">UEFA CHAMPION 1990</h2>
-                        <p>It is one of the most popular football club that offer training programs for the youth.</p>
+                        <h2 class="history-title">HOW WE START</h2>
+                        <p>Kedopeach football academy started with ordinary boys club under supervision some set of people that shared common goals and they were able to achieve their aims of helping the young talented players at grassroots level. And landmark achievements recorded are numerous-  It has won series of trophies in all levels of football competitions.                        </p>
                     </div>
                 </div>
                 <div class="history-item item-left three">
                     <div class="content">
-                        <h2 class="history-title">CLOWN REWARD 2016</h2>
-                        <p>It is one of the most popular football club that offer training programs for the youth.</p>
+                        <h2 class="history-title">WHO WE ARE</h2>
+                        <p>Kedopeach football academy as a registered academy under the tutelage of Nigerian Football Federation, through the Football association of Oyo state chapter, began another journey of footballing business early year of 2024. The academy however did its recruitment of players with a month radio publication to ensure that young talented players from all nooks and crannies are reached out to. To be exactive, over forty players are in the camp attending trainings day in day out.
+                        </p>
                     </div>
-                    <div class="history-year text-start">2016</div>
+                    <div class="history-year text-start">2023</div>
                 </div>
                 <div class="history-item item-right four">
-                    <div class="history-year text-end">2022</div>
+                    <div class="history-year text-end">2024</div>
                     <div class="content">
-                        <h2 class="history-title">WORLD CLUB CUP CHAMPION</h2>
-                        <p>It is one of the most popular football club that offer training programs for the youth.</p>
+                        <h2 class="history-title">WHAT WE DO</h2>
+                        <p>Football academy of Kedopeach is an a that is blessed with veteran coaching crew with almost twenty years experience. Their employments followed the formalization and standardization of the team early the year 2024. <br>
+
+                            Kedopeach football academy has exposed its players to series of scouting program within the limited time of existence. 
+                            
+                            Just last month September, during the scouting program organised by Jerona sports outfit, nine kedopeach players were able to see the light of the day.
+                            </p>
                     </div>
+                </div>
+                <div class="history-item item-left three">
+                    <div class="content">
+                        <h2 class="history-title"></h2>
+                        <p>We are, at our best, wish to continue with our pace of development and envision to the rule the world of football.
+
+                            At Kedopeach, it is already getting better.
+                        </p>
+                    </div>
+                    <div class="history-year text-start">2023</div>
                 </div>
             </div>
         </div>
     </div>
     <!--================= History Section End Here =================-->
 
-
-    <!--================= Video Section Start Here =================-->
-    <div class="rts-video-section inner">
-        <div class="container">
-            <div class="video-section-inner text-center">
-                <div class="play-video">
-                    <a class="popup-video" href="https://www.youtube.com/watch?v=G4t6TqG5LM8"><i
-                            class="fas fa-play"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--================= VIdeo Section End Here =================-->
 
 
     <!--================= Awards Section Start Here =================-->
@@ -355,14 +362,17 @@
                             <h3 class="footer-widget-title"><span class="decorator"></span> GET IN TOUCH</h3>
                             <ul>
                                 <li class="widget-list-item"><i class="fas fa-envelope-open"></i><a
-                                        href="mailto:info@webmail.com">INFO@WEBMAIL.COM</a></li>
-                                <li class="widget-list-item"><i class="fas fa-phone"></i><a href="tel:09877788890">098
-                                        777
-                                        888 90</a></li>
-                                <li class="widget-list-item"><i class="fas fa-map-marker-alt"></i> <span>USA, CALIFORNIA
-                                        20,
-                                        FIRST <br>
-                                        AVENUE, CALIFORNIA</span></li>
+                                        href="mailto:kedopeachsocceracademy@gmail.com">kedopeachsocceracademy@gmail.com</a></li>
+                                <li class="widget-list-item"><i class="fas fa-phone"></i>
+                                    <a href="tel:07035859226">07035859226</a>,
+
+                                    ,<a href="tel:08039288485">08039288485</a>,
+
+                                    ,<a href="tel:07084286153">07084286153</a>,
+
+
+                                </li>
+                                <li class="widget-list-item"><i class="fas fa-map-marker-alt"></i> <span>3, PEACE ESTATE, IYANA AGBALA ITURA, EGBEDA LOCAL GOVERNMENT AREA, IBADAN, OYO STATE.</span></li>
                             </ul>
                         </div>
                     </div>
@@ -378,7 +388,7 @@
                     <div class="footer-bottom-links">
                         <a href="#">TERMS & CONDITONS</a>
                         <a href="faq.html">FAQ</a>
-                        <a href="#">CAREER</a>
+                        <a href="team.html">CAREER</a>
                     </div>
                 </div>
             </div>
