--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         </div>
                         <div class="header-action-items header-action-items1">
 
-                            <a href="" style="color: #f5a828; text-decoration:underline; margin-right: 15px;">
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScg6gsA-GLKEVILR9Yf--qD9c37nyjtOHaA697L-BOfQh9AGw/viewform?embedded=true" target="_blank" style="color: #f5a828; text-decoration:underline; margin-right: 15px;">
                                 <h4 style="color: #f5a828;">Join Our Academy<i
                                         class="far fa-long-arrow-right ml--5"></i></h4>
                             </a>
@@ -169,12 +169,12 @@
                                 <div class="banner-content">
                                     <span class="pretitle" style="background:#f5a828;">WELCOME TO OUR FOOTBALL
                                         CLUB</span>
-                                    <h1 class="banner-heading">MANCHESTER & THE <BR>
-                                        UCL CHAMPION</h1>
+                                    <h1 class="banner-heading">AFILIATE OF OYO STATE <BR>
+                                        FOOTBALL ASSOCIATION </h1>
                                     <div class="banner-btn-area">
                                         <a href="team.html" class="team-btn banner-btn">OUR TEAM <i
                                                 class="far fa-long-arrow-right ml--5"></i></a>
-                                        <a href="#0" class="nxt-match-btn banner-btn">JOIN OUR ACADEMY <i
+                                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScg6gsA-GLKEVILR9Yf--qD9c37nyjtOHaA697L-BOfQh9AGw/viewform?embedded=true" target="_blank" class="nxt-match-btn banner-btn">JOIN OUR ACADEMY <i
                                                 class="far fa-long-arrow-right ml--5"></i></a>
                                     </div>
                                 </div>
@@ -187,12 +187,12 @@
                                 <div class="banner-content">
                                     <span class="pretitle" style="background:#f5a828;">WELCOME TO OUR FOOTBALL
                                         CLUB</span>
-                                    <h1 class="banner-heading">ANDERSON & THE <BR>
-                                        WORLD CUP WINNER</h1>
+                                    <h1 class="banner-heading">UNDER AUSPICES OF <BR>
+                                        NIGERIA FOOTBALL FEDERATION</h1>
                                     <div class="banner-btn-area">
                                         <a href="team.html" class="team-btn banner-btn">OUR TEAM <i
                                                 class="far fa-long-arrow-right ml--5"></i></a>
-                                        <a href="#0" class="nxt-match-btn banner-btn">JOIN OUR ACADEMY <i
+                                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScg6gsA-GLKEVILR9Yf--qD9c37nyjtOHaA697L-BOfQh9AGw/viewform?embedded=true" target="_blank" class="nxt-match-btn banner-btn">JOIN OUR ACADEMY <i
                                                 class="far fa-long-arrow-right ml--5"></i></a>
                                     </div>
                                 </div>
@@ -205,12 +205,12 @@
                                 <div class="banner-content">
                                     <span class="pretitle" style="background:#f5a828;">WELCOME TO OUR FOOTBALL
                                         CLUB</span>
-                                    <h1 class="banner-heading">HENDERSON & THE <BR>
-                                        WORLD CUP WINNER</h1>
+                                    <h1 class="banner-heading">EMPOWERING GENERATION OF <BR>
+                                        FOOTBALL SUPERSTARS</h1>
                                     <div class="banner-btn-area">
                                         <a href="team.html" class="team-btn banner-btn">OUR TEAM <i
                                                 class="far fa-long-arrow-right ml--5"></i></a>
-                                        <a href="#0" class="nxt-match-btn banner-btn">JOIN OUR ACADEMY <i
+                                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScg6gsA-GLKEVILR9Yf--qD9c37nyjtOHaA697L-BOfQh9AGw/viewform?embedded=true" target="_blank" class="nxt-match-btn banner-btn">JOIN OUR ACADEMY <i
                                                 class="far fa-long-arrow-right ml--5"></i></a>
                                     </div>
                                 </div>
@@ -570,11 +570,7 @@
                                     <div id="collapseOne" class="accordion-collapse collapse show"
                                         aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <p class="fs-14">Key business questions are the questions that your data
-                                                expert will be
-                                                tasked with answering. They are the questions you have about
-                                                business
-                                                performance that are central to the overall strategy.</p>
+                                            <p class="fs-14">We welcome young talents between the ages of 10 and 25. Our programs are designed to cater to different age groups, providing tailored training and mentorship to help each player grow and excel at their own pace.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -589,10 +585,7 @@
                                     <div id="collapseTwo" class="accordion-collapse collapse"
                                         aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <p class="fs-14">Key business questions are the questions that your data
-                                                expert will be tasked with answering. They are the questions you
-                                                have about
-                                                business performance that are central to the overall strategy.</p>
+                                            <p class="fs-14">Our training sessions are held twice daily — in the morning and evening. This schedule ensures that players have ample time to develop their skills, work on fitness, and engage in tactical exercises.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -608,11 +601,7 @@
                                     <div id="collapseThree" class="accordion-collapse collapse"
                                         aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <p class="fs-14">Key business questions are the questions that your data
-                                                expert will be
-                                                tasked with answering. They are the questions you have about
-                                                business
-                                                performance that are central to the overall strategy.</p>
+                                            <p class="fs-14">Yes, Kedopeach Football Academy actively participates in various local and international competitions. These competitions provide our players with the opportunity to showcase their talents, gain valuable experience, and compete at a high level, further preparing them for successful careers in football.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -641,12 +630,7 @@
                                         <div id="collapseFour" class="accordion-collapse collapse show"
                                             aria-labelledby="headingFour" data-bs-parent="#accordion2">
                                             <div class="accordion-body">
-                                                <p class="fs-14">Initial conversations set the tone for if the
-                                                    person
-                                                    wants to continue to get to know
-                                                    you, so be ready to answer some questions as well. Initial set the
-                                                    tone
-                                                    for if the person wants to continue to get to know.</p>
+                                                <p class="fs-14">At Kedopeach Football Academy, we place a strong emphasis on the academic development of our players alongside their athletic training. We have structured programs that balance football training with academic education, ensuring that players attend classes regularly and meet academic requirements. We also offer mentorship and support to help players succeed both on and off the field, preparing them for a well-rounded future.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -655,22 +639,17 @@
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#collapseTFive"
                                                 aria-expanded="false" aria-controls="collapseTFive">
-                                                <span>02.</span> What really makes you angry?
+                                                <span>05.</span> Do you offer scholarships?
                                             </button>
                                         </h2>
                                         <div id="collapseTFive" class="accordion-collapse collapse"
                                             aria-labelledby="headingFive" data-bs-parent="#accordion2">
                                             <div class="accordion-body">
-                                                <p class="fs-14">Initial conversations set the tone for if the
-                                                    person
-                                                    wants to continue to get to know
-                                                    you, so be ready to answer some questions as well. Initial set the
-                                                    tone
-                                                    for if the person wants to continue to get to know.</p>
+                                                <p class="fs-14">Yes, Kedopeach Football Academy offers scholarships to exceptional talents. We believe in providing opportunities for gifted players who demonstrate both skill and dedication, regardless of their financial background. Our scholarship program helps support these players in achieving their football and academic goals.</p>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="accordion-item">
+                                    <!-- <div class="accordion-item">
                                         <h2 class="accordion-header" id="headingSix">
                                             <button class="accordion-button collapsed" type="button"
                                                 data-bs-toggle="collapse" data-bs-target="#collapseSix"
@@ -689,7 +668,7 @@
                                                     for if the person wants to continue to get to know.</p>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -719,8 +698,7 @@
                             </div>
                             <div class="section-title-area section-title-area1 text-start mb--50">
                                 <h1 class="section-title">SUBSCRIBE NEWSLETTER</h1>
-                                <p>Empus justo tortor nunc ullamcorper curabitur ultrices duis cum lobortis Montes
-                                    facilisi vitae litora non dis at class</p>
+                                <p>Stay updated on the latest news, events, and opportunities from Kedopeach Football</p>
                             </div>
                             <form>
                                 <div class="form">
@@ -876,14 +854,17 @@
                             <h3 class="footer-widget-title"><span class="decorator"></span> GET IN TOUCH</h3>
                             <ul>
                                 <li class="widget-list-item"><i class="fas fa-envelope-open"></i><a
-                                        href="mailto:info@webmail.com">INFO@WEBMAIL.COM</a></li>
-                                <li class="widget-list-item"><i class="fas fa-phone"></i><a href="tel:09877788890">098
-                                        777
-                                        888 90</a></li>
-                                <li class="widget-list-item"><i class="fas fa-map-marker-alt"></i> <span>USA, CALIFORNIA
-                                        20,
-                                        FIRST <br>
-                                        AVENUE, CALIFORNIA</span></li>
+                                        href="mailto:kedopeachsocceracademy@gmail.com">kedopeachsocceracademy@gmail.com</a></li>
+                                <li class="widget-list-item"><i class="fas fa-phone"></i>
+                                    <a href="tel:07035859226">07035859226</a>,
+
+                                    ,<a href="tel:08039288485">08039288485</a>,
+
+                                    ,<a href="tel:07084286153">07084286153</a>,
+
+
+                                </li>
+                                <li class="widget-list-item"><i class="fas fa-map-marker-alt"></i> <span>3, PEACE ESTATE, IYANA AGBALA ITURA, EGBEDA LOCAL GOVERNMENT AREA, IBADAN, OYO STATE.</span></li>
                             </ul>
                         </div>
                     </div>
@@ -899,7 +880,7 @@
                     <div class="footer-bottom-links">
                         <a href="#">TERMS & CONDITONS</a>
                         <a href="faq.html">FAQ</a>
-                        <a href="#">CAREER</a>
+                        <a href="team.html">CAREER</a>
                     </div>
                 </div>
             </div>
