--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
                             <a class="mm-link" href="index.html">Home</a>
     
                         </li>
-                        <li><a class="mm-link" href="about.html">About</a></li>
+                        
                         <li><a class="menu-item" href="about.html">About</a></li>
                         <li><a class="menu-item" href="gallery.html">Gallery</a></li>
                         <li><a class="menu-item" href="team.html">Team</a></li>
@@ -300,9 +300,9 @@
     </div>
     <div class="vision-grid">
         <div class="image">
-            <img src="/foor.jpg" alt="" width="100" srcset="">
+            <!-- <img src="/foor.jpg" alt="" width="100" srcset=""> -->
         </div>
-        <div class="vision-text" style="text-align: center;">
+        <div class="vision-text" style="text-align: center;"><br>
             <p>To be the leading football academy in Nigeria, known for producing world-class football talents who make positive impacts in the sport, both on and off the field.</p>
         </div>
     </div>
