--- a/about.html
+++ b/about.html
@@ -194,7 +194,7 @@
                     <div class="col-lg-5 col-12">
                         <div class="about-thumb">
                             <div class="img1"><img src="assets/images/gallery/img4.jpg" alt="about-thumb"></div>
-                            <div class="img2"><img src="assets/images/gallery/img5.jpg" alt="about-thumb"></div>
+                            <div class="img2"><img src="assets/images/players/ADETAYO.jpg" alt="about-thumb"></div>
                         </div>
                     </div>
                     <div class="col-lg-7 col-12">
@@ -278,7 +278,7 @@
                   
                 </div>
                 <div class="details-video">
-                    <div class="video-thumb"><img src="./foor.jpg" alt="video-thumb" width="500PX">
+                    <div class="video-thumb"><img src="./assets/images/foor.jpg" alt="video-thumb" width="500PX">
                         
                     </div>
                 </div>
