--- a/about.html
+++ b/about.html
@@ -155,8 +155,8 @@
                 <div class="side-bar-social-links">
                     <a href="#0" class="platform"><i class="fab fa-facebook-f"></i></a>
                     <a href="#0" class="platform"><i class="fab fa-twitter"></i></a>
-                    <a href="#0" class="platform"><i class="fab fa-behance"></i></a>
-                    <a href="#0" class="platform"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.instagram.com/kedopeachfootballacademy/profilecard/?igsh=bXk3ZzZiNnkxMGlv" class="platform"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/@KEDOPEACHSOCCERACADEMY" class="platform"><i class="fab fa-youtube"></i></a>
                 </div>
             </aside>
             <!--================= Slide Bar Start Here =================-->
@@ -193,7 +193,6 @@
                 <div class="row align-items-center">
                     <div class="col-lg-5 col-12">
                         <div class="about-thumb">
-                            <div class="img1"><img src="assets/images/gallery/img4.jpg" alt="about-thumb"></div>
                             <div class="img2"><img src="assets/images/players/ADETAYO.jpg" alt="about-thumb"></div>
                         </div>
                     </div>
@@ -518,7 +517,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="hero-image">
-                            <img src="assets/images/team/player3.png" alt="">
+                            <img src="assets/images/players/team.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -543,7 +542,7 @@
                             <div class="social-links">
                                 <a href="#0" target="_blank" class="platform"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#0" target="_blank" class="platform"><i class="fab fa-twitter"></i></a>
-                                <a href="#0" target="_blank" class="platform"><i class="fab fa-instagram-f"></i></a>
+                                <a href="https://www.instagram.com/kedopeachfootballacademy/profilecard/?igsh=bXk3ZzZiNnkxMGlv" target="_blank" class="platform"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.youtube.com/@KEDOPEACHSOCCERACADEMY" target="_blank" class="platform"><i class="fab fa-youtube"></i></a>
                             </div>
                         </div>
