--- a/gallery.html
+++ b/gallery.html
@@ -151,8 +151,8 @@
                 <div class="side-bar-social-links">
                     <a href="#0" class="platform"><i class="fab fa-facebook-f"></i></a>
                     <a href="#0" class="platform"><i class="fab fa-twitter"></i></a>
-                    <a href="#0" class="platform"><i class="fab fa-behance"></i></a>
-                    <a href="#0" class="platform"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.instagram.com/kedopeachfootballacademy/profilecard/?igsh=bXk3ZzZiNnkxMGlv" class="platform"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/@KEDOPEACHSOCCERACADEMY" class="platform"><i class="fab fa-youtube"></i></a>
                 </div>
             </aside>
             <!--================= Slide Bar Start Here =================-->
@@ -182,230 +182,78 @@
     <!--================= Gallery Section Start Here =================-->
     <div class="rts-gallery-section">
         <div class="container">
-            <div class="top-wrap">
+            <!-- <div class="top-wrap">
                 <div class="filter-button-group">
                     <button class="filter-btn active" data-show=".fifa20">FIFA 2023</button>
                     <button class="filter-btn" data-show=".uefacup">UEFA CUP</button>
                     <button class="filter-btn" data-show=".warmup">WARM-UP</button>
                     <button class="filter-btn" data-show=".national">NATIONAL</button>
                 </div>
-            </div>
-            <div class="filterd-items fifa20">
+            </div> -->
+            <div class="filterd-items fifa20"><!---- hide ---->
                 <div class="gallery-grid">
                     <div class="row">
+
                         <div class="col-xl-4 col-md-6">
                             <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full1.png"
-                                    title="Football.png"><img src="assets/images/gallery/1.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
+                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/players/team1.jpg"
+                                    title="Football.png"><img src="assets/images/players/team1.jpg" alt="gallery-image">
                                 </a>
                             </div>
                         </div>
+
+
                         <div class="col-xl-4 col-md-6">
                             <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full2.png"
-                                    title="Football.png"><img src="assets/images/gallery/2.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
+                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/players/team2.jpg"
+                                    title="Football.png"><img src="assets/images/players/team2.jpg" alt="gallery-image">
                                 </a>
                             </div>
                         </div>
+
+
                         <div class="col-xl-4 col-md-6">
                             <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full3.png"
-                                    title="Football.png"><img src="assets/images/gallery/3.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
+                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/players/team3.jpg"
+                                    title="Football.png"><img src="assets/images/players/team3.jpg" alt="gallery-image">
                                 </a>
                             </div>
                         </div>
+
+
                         <div class="col-xl-4 col-md-6">
                             <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full4.png"
-                                    title="Football.png"><img src="assets/images/gallery/4.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
+                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/players/team4.jpg"
+                                    title="Football.png"><img src="assets/images/players/team4.jpg" alt="gallery-image">
                                 </a>
                             </div>
                         </div>
+
+
                         <div class="col-xl-4 col-md-6">
                             <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full5.png"
-                                    title="Football.png"><img src="assets/images/gallery/5.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
+                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/players/team5.jpg"
+                                    title="Football.png"><img src="assets/images/players/team5.jpg" alt="gallery-image">
                                 </a>
                             </div>
                         </div>
+
+
+
                         <div class="col-xl-4 col-md-6">
                             <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full6.png"
-                                    title="Football.png"><img src="assets/images/gallery/6.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
+                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/players/ADETAYO.jpg"
+                                    title="Football.png"><img src="assets/images/players/ADETAYO.jpg" alt="gallery-image">
                                 </a>
                             </div>
                         </div>
+
+
+
                     </div>
                 </div>
             </div>
-            <div class="filterd-items uefacup hide">
-                <div class="gallery-grid">
-                    <div class="row">
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full2.png"
-                                    title="Football.png"><img src="assets/images/gallery/2.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full1.png"
-                                    title="Football.png"><img src="assets/images/gallery/1.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full4.png"
-                                    title="Football.png"><img src="assets/images/gallery/4.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full3.png"
-                                    title="Football.png"><img src="assets/images/gallery/3.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full6.png"
-                                    title="Football.png"><img src="assets/images/gallery/6.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full5.png"
-                                    title="Football.png"><img src="assets/images/gallery/5.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="filterd-items warmup hide">
-                <div class="gallery-grid">
-                    <div class="row">
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full1.png"
-                                    title="Football.png"><img src="assets/images/gallery/1.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full2.png"
-                                    title="Football.png"><img src="assets/images/gallery/2.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full3.png"
-                                    title="Football.png"><img src="assets/images/gallery/3.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full4.png"
-                                    title="Football.png"><img src="assets/images/gallery/4.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full5.png"
-                                    title="Football.png"><img src="assets/images/gallery/5.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full6.png"
-                                    title="Football.png"><img src="assets/images/gallery/6.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="filterd-items national hide">
-                <div class="gallery-grid">
-                    <div class="row">
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full2.png"
-                                    title="Football.png"><img src="assets/images/gallery/2.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full1.png"
-                                    title="Football.png"><img src="assets/images/gallery/1.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full4.png"
-                                    title="Football.png"><img src="assets/images/gallery/4.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full3.png"
-                                    title="Football.png"><img src="assets/images/gallery/3.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full6.png"
-                                    title="Football.png"><img src="assets/images/gallery/6.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-md-6">
-                            <div class="gallery-item">
-                                <a class="gallery-image image-popup-vertical-fit" href="assets/images/gallery/full5.png"
-                                    title="Football.png"><img src="assets/images/gallery/5.png" alt="gallery-image">
-                                    <button class="pop-btn"><i class="fal fa-plus"></i></button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
     <!--================= Gallery Section End Here =================-->
@@ -426,7 +274,7 @@
                             <div class="social-links">
                                 <a href="#0" target="_blank" class="platform"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#0" target="_blank" class="platform"><i class="fab fa-twitter"></i></a>
-                                <a href="#0" target="_blank" class="platform"><i class="fab fa-instagram-f"></i></a>
+                                <a href="https://www.instagram.com/kedopeachfootballacademy/profilecard/?igsh=bXk3ZzZiNnkxMGlv" target="_blank" class="platform"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.youtube.com/@KEDOPEACHSOCCERACADEMY" target="_blank" class="platform"><i class="fab fa-youtube"></i></a>
                             </div>
                         </div>
