--- a/history.html
+++ b/history.html
@@ -153,8 +153,8 @@
                 <div class="side-bar-social-links">
                     <a href="#0" class="platform"><i class="fab fa-facebook-f"></i></a>
                     <a href="#0" class="platform"><i class="fab fa-twitter"></i></a>
-                    <a href="#0" class="platform"><i class="fab fa-behance"></i></a>
-                    <a href="#0" class="platform"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.instagram.com/kedopeachfootballacademy/profilecard/?igsh=bXk3ZzZiNnkxMGlv" class="platform"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/@KEDOPEACHSOCCERACADEMY" class="platform"><i class="fab fa-youtube"></i></a>
                 </div>
             </aside>
             <!--================= Slide Bar Start Here =================-->
@@ -341,7 +341,7 @@
                             <div class="social-links">
                                 <a href="#0" target="_blank" class="platform"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#0" target="_blank" class="platform"><i class="fab fa-twitter"></i></a>
-                                <a href="#0" target="_blank" class="platform"><i class="fab fa-instagram-f"></i></a>
+                                <a href="https://www.instagram.com/kedopeachfootballacademy/profilecard/?igsh=bXk3ZzZiNnkxMGlv" target="_blank" class="platform"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.youtube.com/@KEDOPEACHSOCCERACADEMY" target="_blank" class="platform"><i class="fab fa-youtube"></i></a>
                             </div>
                         </div>
