--- a/team.html
+++ b/team.html
@@ -153,8 +153,8 @@
                 <div class="side-bar-social-links">
                     <a href="#0" class="platform"><i class="fab fa-facebook-f"></i></a>
                     <a href="#0" class="platform"><i class="fab fa-twitter"></i></a>
-                    <a href="#0" class="platform"><i class="fab fa-behance"></i></a>
-                    <a href="#0" class="platform"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.instagram.com/kedopeachfootballacademy/profilecard/?igsh=bXk3ZzZiNnkxMGlv" class="platform"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/@KEDOPEACHSOCCERACADEMY" class="platform"><i class="fab fa-youtube"></i></a>
                 </div>
             </aside>
             <!--================= Slide Bar Start Here =================-->
@@ -465,6 +465,24 @@
                         </div>
                     </div>
 
+                    
+
+                    <div class="col-xl-3 col-md-4 col-sm-6">
+                        <div class="team-wraper">
+                            <div class="player-card">
+                                <a class="image" href=""><img src="assets/images/players/player/Fagbuyi_olawale-removebg-preview.png"
+                                        alt=""></a>
+                                <div class="number">00</div>
+                             
+                            </div>
+                            <div class="profile">
+                                <p class="position">ATTACKING MILDFIDER</p>
+                                <a href="" class="name" style="text-transform:capitalize;">Fagbuyi Olawale</a>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
@@ -583,7 +601,7 @@
                             <div class="social-links">
                                 <a href="#0" target="_blank" class="platform"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#0" target="_blank" class="platform"><i class="fab fa-twitter"></i></a>
-                                <a href="#0" target="_blank" class="platform"><i class="fab fa-instagram-f"></i></a>
+                                <a href="https://www.instagram.com/kedopeachfootballacademy/profilecard/?igsh=bXk3ZzZiNnkxMGlv" target="_blank" class="platform"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.youtube.com/@KEDOPEACHSOCCERACADEMY" target="_blank" class="platform"><i class="fab fa-youtube"></i></a>
                             </div>
                         </div>
