--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <div class="banner-single banner-single-1 banner-bg">
                             <div class="container">
                                 <div class="banner-content">
-                                    <span class="pretitle" style="background:#f5a828;">WELCOME TO KADOPEACH FOOTBALL
+                                    <span class="pretitle" style="background:#f5a828;">WELCOME TO KEDOPEACH FOOTBALL
                                         ACADEMY</span>
                                     <h1 class="banner-heading">AFILIATE OF OYO STATE <BR>
                                         FOOTBALL ASSOCIATION </h1>
@@ -186,7 +186,7 @@
                         <div class="banner-single banner-single-1_2 banner-bg">
                             <div class="container">
                                 <div class="banner-content">
-                                    <span class="pretitle" style="background:#f5a828;">WELCOME TO KADOPEACH FOOTBALL
+                                    <span class="pretitle" style="background:#f5a828;">WELCOME TO KEDOPEACH FOOTBALL
                                         ACADEMY</span>
                                     <h1 class="banner-heading">UNDER AUSPICES OF <BR>
                                         NIGERIA FOOTBALL FEDERATION</h1>
@@ -205,7 +205,7 @@
                         <div class="banner-single banner-single-3 banner-bg">
                             <div class="container">
                                 <div class="banner-content">
-                                    <span class="pretitle" style="background:#f5a828;">WELCOME TO KADOPEACH FOOTBALL
+                                    <span class="pretitle" style="background:#f5a828;">WELCOME TO KEDOPEACH FOOTBALL
                                         ACADEMY</span>
                                     <h1 class="banner-heading">EMPOWERING GENERATION OF
                                         FOOTBALL SUPERSTARS</h1>
@@ -242,7 +242,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-5 col-12">
                         <div class="about-thumb">
-                            <div class="img2"><img src="assets/images/players/ADETAYO.jpg" alt="about-thumb"></div>
+                            <div class="img2"><img src="assets/images/Dr Michael Olorunnishola.jpg" alt="about-thumb"></div>
                         </div>
                     </div>
                     <div class="col-lg-7 col-12">
