--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                     <li><a class="menu-item" href="about.html">About</a></li>
                                     <li><a class="menu-item" href="gallery.html">Gallery</a></li>
                                     <li><a class="menu-item" href="team.html">Team</a></li>
-                                    <li><a class="menu-item" href="awards.html">Awards</a></li>
+
                                     <li><a class="menu-item" href="history.html">History</a></li>
 
                                     <li><a class="menu-item" href="contact.html">Contact</a></li>
@@ -144,7 +144,7 @@
                     <li><a class="mm-link" href="about.html">About</a></li>
                     <li><a class="menu-item" href="gallery.html">Gallery</a></li>
                     <li><a class="menu-item" href="team.html">Team</a></li>
-                    <li><a class="menu-item" href="awards.html">Awards</a></li>
+
                     <li><a class="menu-item" href="history.html">History</a></li>
                     <li><a class="mm-link" href="contact.html">Contact</a></li>
                 </ul>
@@ -153,8 +153,10 @@
             <div class="side-bar-social-links">
                 <a href="#0" class="platform"><i class="fab fa-facebook-f"></i></a>
                 <a href="#0" class="platform"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.instagram.com/kedopeachfootballacademy/profilecard/?igsh=bXk3ZzZiNnkxMGlv" class="platform"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.youtube.com/@KEDOPEACHSOCCERACADEMY" class="platform"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.instagram.com/kedopeachfootballacademy/profilecard/?igsh=bXk3ZzZiNnkxMGlv"
+                    class="platform"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.youtube.com/@KEDOPEACHSOCCERACADEMY" class="platform"><i
+                        class="fab fa-youtube"></i></a>
             </div>
         </aside>
         <!--================= Slide Bar Start Here =================-->
@@ -242,7 +244,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-5 col-12">
                         <div class="about-thumb">
-                            <div class="img2"><img src="assets/images/Dr Michael Olorunnishola.jpg" alt="about-thumb"></div>
+                            <div class="img2"><img src="assets/images/Dr-micheal.png" alt="about-thumb"></div>
                         </div>
                     </div>
                     <div class="col-lg-7 col-12">
@@ -857,7 +859,8 @@
                             <div class="social-links">
                                 <a href="#0" target="_blank" class="platform"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#0" target="_blank" class="platform"><i class="fab fa-twitter"></i></a>
-                                <a href="https://www.instagram.com/kedopeachfootballacademy/profilecard/?igsh=bXk3ZzZiNnkxMGlv" target="_blank" class="platform"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/kedopeachfootballacademy/profilecard/?igsh=bXk3ZzZiNnkxMGlv"
+                                    target="_blank" class="platform"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.youtube.com/@KEDOPEACHSOCCERACADEMY" target="_blank"
                                     class="platform"><i class="fab fa-youtube"></i></a>
                             </div>
