--- a/about.html
+++ b/about.html
@@ -196,7 +196,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-5 col-12">
                         <div class="about-thumb">
-                            <div class="img2"><img src="assets/images/players/ADETAYO.jpg" alt="about-thumb"></div>
+                            <div class="img2"><img src="assets/images/Dr-micheal.png" alt="about-thumb"></div>
                         </div>
                     </div>
                     <div class="col-lg-7 col-12">
