--- a/team.html
+++ b/team.html
@@ -140,7 +140,6 @@
                         <a class="mm-link" href="index.html">Home</a>
 
                     </li>
-                    <li><a class="mm-link" href="about.html">About</a></li>
                     <li><a class="menu-item" href="about.html">About</a></li>
                     <li><a class="menu-item" href="gallery.html">Gallery</a></li>
                     <li><a class="menu-item" href="team.html">Team</a></li>
@@ -642,14 +641,20 @@
                             <h3 class="footer-widget-title"><span class="decorator"></span> GET IN TOUCH</h3>
                             <ul>
                                 <li class="widget-list-item"><i class="fas fa-envelope-open"></i><a
-                                        href="mailto:info@webmail.com">INFO@WEBMAIL.COM</a></li>
-                                <li class="widget-list-item"><i class="fas fa-phone"></i><a href="tel:09877788890">098
-                                        777
-                                        888 90</a></li>
-                                <li class="widget-list-item"><i class="fas fa-map-marker-alt"></i> <span>USA, CALIFORNIA
-                                        20,
-                                        FIRST <br>
-                                        AVENUE, CALIFORNIA</span></li>
+                                        href="mailto:kedopeachsocceracademy@gmail.com">kedopeachsocceracademy@gmail.com</a>
+                                </li>
+                                <li class="widget-list-item"><i class="fas fa-phone"></i>
+                                    <a href="tel:07035859226">07035859226</a>,
+
+                                    ,<a href="tel:08039288485">08039288485</a>,
+
+                                    ,<a href="tel:07084286153">07084286153</a>,
+
+
+                                </li>
+                                <li class="widget-list-item"><i class="fas fa-map-marker-alt"></i> <span>3, PEACE
+                                        ESTATE, IYANA AGBALA ITURA, EGBEDA LOCAL GOVERNMENT AREA, IBADAN, OYO
+                                        STATE.</span></li>
                             </ul>
                         </div>
                     </div>
@@ -665,7 +670,7 @@
                     <div class="footer-bottom-links">
                         <a href="#">TERMS & CONDITONS</a>
                         <a href="faq.html">FAQ</a>
-                        <a href="#">CAREER</a>
+                        <a href="team.html">CAREER</a>
                     </div>
                 </div>
             </div>
