--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <div class="col-lg-7 col-12">
                         <div class="contents">
                             <div class="section-title-area section-title-area1 text-start">
-                                <h4 class="section-title"><span>Why Choose Our Academy</span> <br> Excellence in Every
+                                <h4 class="section-title"><span>Why Choose Our Academy?</span> <br> Excellence in Every
                                     Goal, Every Play
                                 </h4>
                                 <p>At Kedopeach Football Academy, we take pride in our experienced and dedicated
